Fix text-shadow for readability

--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -19,5 +19,5 @@ a,
 h1,
 h2,
 h3 {
-  text-shadow: 2px 2px $color1-dark;
+  text-shadow: 1px 1px 2px $color1-dark;
 }
